@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -27,7 +27,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class CreditCardFilterTest extends AbstractFilterTest {
 
@@ -37,7 +37,7 @@ public class CreditCardFilterTest extends AbstractFilterTest {
     public void filterCreditCardOnlyValid() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new CreditCardFilterStrategy()))
+                .withStrategies(List.of(new CreditCardFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new CreditCardAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -47,51 +47,51 @@ public class CreditCardFilterTest extends AbstractFilterTest {
 
         // VISA
 
-        FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4532613702852251 visa.");
+        FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4532613702852251 visa.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
         Assertions.assertEquals("4532613702852251", filterResult.getSpans().get(0).getText());
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556662764258031");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556662764258031", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4929081870602661");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4929081870602661", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4716-4366-8767-7438");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4716-4366-8767-7438", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556 5849 8186 7933");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556 5849 8186 7933", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
         // AMEX
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 376454057275914");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 376454057275914", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 37, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 346009657106278.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 346009657106278.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 37, FilterType.CREDIT_CARD));
 
         // MASTERCARD
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5567408136464012");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5567408136464012", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5100170632668801.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5100170632668801.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
         // DISCOVER
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011485579364263");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011485579364263", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011792597726344.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011792597726344.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
@@ -101,7 +101,7 @@ public class CreditCardFilterTest extends AbstractFilterTest {
     public void filterCreditCardValidAndInvalid() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new CreditCardFilterStrategy()))
+                .withStrategies(List.of(new CreditCardFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new CreditCardAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -111,50 +111,50 @@ public class CreditCardFilterTest extends AbstractFilterTest {
 
         // VISA
 
-        FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 1234567812345678 visa.");
+        FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 1234567812345678 visa.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 0000000000000000");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 0000000000000000", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 9876543219876543");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 9876543219876543", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 9876-5432-1987-6543");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 9876-5432-1987-6543", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556 6627 6425 8000");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 4556 6627 6425 8000", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
         // AMEX
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 376454057005914");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 376454057005914", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 37, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 346119657106278.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 346119657106278.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 37, FilterType.CREDIT_CARD));
 
         // MASTERCARD
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5567408136464000");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5567408136464000", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5100170632668000.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 5100170632668000.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
         // DISCOVER
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011485579364000");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011485579364000", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
-        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011792597726000.");
+        filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the payment method is 6011792597726000.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 22, 38, FilterType.CREDIT_CARD));
 
