@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -30,15 +30,16 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class DateFilterTest extends AbstractFilterTest {
     
-    private AlertService alertService = Mockito.mock(AlertService.class);
+    private final AlertService alertService = Mockito.mock(AlertService.class);
 
     private FilterConfiguration buildFilterConfiguration() {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new DateFilterStrategy()))
+                .withStrategies(List.of(new DateFilterStrategy()))
                 .withAnonymizationService(new DateAnonymizationService(new LocalAnonymizationCacheService()))
                 .withAlertService(alertService)
                 .build();
@@ -51,7 +52,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 22, 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 22, 1999", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 12, FilterType.DATE));
@@ -64,7 +65,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "13-06-31");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "13-06-31", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 8, FilterType.DATE));
 
@@ -75,7 +76,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2205-02-31");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2205-02-31", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 10, FilterType.DATE));
 
@@ -85,7 +86,7 @@ public class DateFilterTest extends AbstractFilterTest {
     public void filterDate4() throws Exception {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-2019");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-2019", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 10, FilterType.DATE));
@@ -97,7 +98,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 8, FilterType.DATE));
 
@@ -108,7 +109,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2-8-2019");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2-8-2019", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 8, FilterType.DATE));
 
@@ -119,7 +120,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2-15-2019");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "2-15-2019", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 9, FilterType.DATE));
 
@@ -130,7 +131,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "January 2012");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "January 2012", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 12, FilterType.DATE));
 
@@ -141,7 +142,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "December 2015");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "December 2015", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 13, FilterType.DATE));
 
@@ -152,7 +153,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 13, FilterType.DATE));
 
@@ -163,7 +164,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "april 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "april 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 10, FilterType.DATE));
 
@@ -174,7 +175,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "12-05-2014");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "12-05-2014", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 10, FilterType.DATE));
 
@@ -185,7 +186,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22, 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22, 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 17, FilterType.DATE));
 
@@ -196,7 +197,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22nd, 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22nd, 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 19, FilterType.DATE));
 
@@ -207,7 +208,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22 nd, 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22 nd, 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 20, FilterType.DATE));
 
@@ -218,7 +219,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22nd");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 22nd", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 13, FilterType.DATE));
 
@@ -229,7 +230,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 1 st");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 1 st", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 8, FilterType.DATE));
 
@@ -240,7 +241,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "June 13th");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "June 13th", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 9, FilterType.DATE));
 
@@ -251,7 +252,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 2, 1999");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "November 2, 1999", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 16, FilterType.DATE));
 
@@ -262,7 +263,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 1st");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "May 1st", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 7, FilterType.DATE));
 
@@ -273,7 +274,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "December 4th");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "December 4th", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 12, FilterType.DATE));
 
@@ -284,7 +285,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19@12:00");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19@12:00", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 8, FilterType.DATE));
 
@@ -295,7 +296,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19@12:00");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-31-19@12:00", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
@@ -306,7 +307,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-35-19@12:00");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-35-19@12:00", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -316,7 +317,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-15-19");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "02-15-19", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -326,7 +327,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may be on top of that.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
@@ -336,7 +337,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -346,7 +347,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15, 2020 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15, 2020 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -356,7 +357,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 2020 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 2020 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -366,7 +367,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 19 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 15 19 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -376,7 +377,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 5 19 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this may 5 19 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -386,7 +387,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this June 21, 2020 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this June 21, 2020 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertEquals("June 21, 2020", filterResult.getSpans().get(0).getText());
 
@@ -399,7 +400,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this 09-2021 be on top of that.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The good news is everywhere we go it is that way but this 09-2021 be on top of that.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertEquals("09-2021", filterResult.getSpans().get(0).getText());
 
@@ -422,7 +423,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(filterConfiguration, false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Owns and drives his own vehicle but states he has not driven his car since last October 2009.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Owns and drives his own vehicle but states he has not driven his car since last October 2009.", attributes);
 
         LOGGER.info(filterResult.getSpans().get(0).getReplacement());
 
@@ -438,7 +439,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Observation: 91-100% strong nuclear staining");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Observation: 91-100% strong nuclear staining", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
         showSpans(filterResult.getSpans());
@@ -450,7 +451,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary petition on behalf of FKAAHS, Inc. fka Aire");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary petition on behalf of FKAAHS, Inc. fka Aire", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -468,7 +469,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary petition on behalf of FKAAHS, Inc. fka Aire");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary petition on behalf of FKAAHS, Inc. fka Aire", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -484,7 +485,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), false, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case No. 12-12110 K");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case No. 12-12110 K", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -500,7 +501,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case No. 12-12110 K");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case No. 12-12110 K", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -513,7 +514,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case 1-20-01023-MJK");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case 1-20-01023-MJK", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -526,7 +527,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "That on July 3, 2012 an involuntary", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -542,7 +543,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Entered 06/16/20 11:55:37,");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Entered 06/16/20 11:55:37,", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -558,7 +559,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case 1-20-01023-MJK,    Doc 1,    Filed 06/16/20,    Entered 06/16/20 11:55:37,");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Case 1-20-01023-MJK,    Doc 1,    Filed 06/16/20,    Entered 06/16/20 11:55:37,", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -577,7 +578,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "On August 22, 2012, Plaintiff, Wendy J. Christophersen, was appointed as interim");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "On August 22, 2012, Plaintiff, Wendy J. Christophersen, was appointed as interim", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -595,7 +596,7 @@ public class DateFilterTest extends AbstractFilterTest {
 
         final DateFilter filter = new DateFilter(buildFilterConfiguration(), true, DateSpanValidator.getInstance());
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "On Aug. 31, 2020, Plaintiff, Wendy J. Christophersen, was appointed as interim");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "On Aug. 31, 2020, Plaintiff, Wendy J. Christophersen, was appointed as interim", attributes);
 
         showSpans(filterResult.getSpans());
 
