@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -27,17 +27,17 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class SsnFilterTest extends AbstractFilterTest {
 
-    private AlertService alertService = Mockito.mock(AlertService.class);
+    private final AlertService alertService = Mockito.mock(AlertService.class);
 
     @Test
     public void filterSsn1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -45,7 +45,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123-45-6789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123-45-6789.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 22, FilterType.SSN));
         Assertions.assertEquals("123-45-6789", filterResult.getSpans().get(0).getText());
@@ -56,7 +56,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -64,7 +64,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123456789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123456789.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 20, FilterType.SSN));
 
@@ -74,7 +74,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -82,7 +82,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 45 6789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 45 6789.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 22, FilterType.SSN));
 
@@ -92,7 +92,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -100,7 +100,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 45 6789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 45 6789.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 22, FilterType.SSN));
 
@@ -110,7 +110,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -118,7 +118,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 454 6789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 454 6789.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
@@ -127,7 +127,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -135,7 +135,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 4f 6789.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 123 4f 6789.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
@@ -144,7 +144,7 @@ public class SsnFilterTest extends AbstractFilterTest {
     public void filterSsn7() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new SsnFilterStrategy()))
+                .withStrategies(List.of(new SsnFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -152,7 +152,7 @@ public class SsnFilterTest extends AbstractFilterTest {
 
         final SsnFilter filter = new SsnFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 11-1234567.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the ssn is 11-1234567.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 21, FilterType.SSN));
 
