@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -27,7 +27,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class StreetAddressFilterTest extends AbstractFilterTest {
 
@@ -37,7 +37,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -45,7 +45,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 Main St");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 Main St", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 9, 20, FilterType.STREET_ADDRESS));
@@ -56,7 +56,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -64,7 +64,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 S Main St");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 S Main St", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 9, 22, FilterType.STREET_ADDRESS));
@@ -75,7 +75,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -83,7 +83,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 South Main St");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 100 South Main St", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 9, 26, FilterType.STREET_ADDRESS));
@@ -94,7 +94,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -102,7 +102,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 1000 Main Street");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "lived at 1000 Main Street", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 9, 25, FilterType.STREET_ADDRESS));
@@ -113,7 +113,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -121,7 +121,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "North 2800 Clay Edwards Drive");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "North 2800 Clay Edwards Drive", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 6, 29, FilterType.STREET_ADDRESS));
@@ -132,7 +132,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -140,7 +140,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "14 Southampton St.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "14 Southampton St.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 18, FilterType.STREET_ADDRESS));
@@ -151,7 +151,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter7() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -159,7 +159,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "22 Newport Drive");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "22 Newport Drive", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 16, FilterType.STREET_ADDRESS));
@@ -170,7 +170,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter8() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -178,7 +178,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "78 Glendale Street");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "78 Glendale Street", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 18, FilterType.STREET_ADDRESS));
@@ -189,7 +189,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter9() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -197,7 +197,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "6 Berkshire Court");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "6 Berkshire Court", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 17, FilterType.STREET_ADDRESS));
@@ -208,7 +208,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter10() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -216,7 +216,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "291 North Pawnee Ave.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "291 North Pawnee Ave.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 21, FilterType.STREET_ADDRESS));
@@ -227,7 +227,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter11() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -235,7 +235,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "468 William Street");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "468 William Street", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 18, FilterType.STREET_ADDRESS));
@@ -246,7 +246,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter12() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -254,7 +254,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "291 6th Dr.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "291 6th Dr.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 11, FilterType.STREET_ADDRESS));
@@ -265,7 +265,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter13() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -273,7 +273,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "9444 Heritage St.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "9444 Heritage St.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 17, FilterType.STREET_ADDRESS));
@@ -284,7 +284,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter14() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -292,7 +292,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "70 Birchpond Street");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "70 Birchpond Street", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 19, FilterType.STREET_ADDRESS));
@@ -303,7 +303,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter15() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -311,7 +311,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "656 S. Inverness St.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "656 S. Inverness St.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 20, FilterType.STREET_ADDRESS));
@@ -322,7 +322,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter16() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -330,7 +330,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "9142 Arlington Court");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "9142 Arlington Court", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 20, FilterType.STREET_ADDRESS));
@@ -341,7 +341,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter17() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -349,7 +349,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 16, FilterType.STREET_ADDRESS));
@@ -360,7 +360,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter18() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -368,7 +368,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 15, FilterType.STREET_ADDRESS));
@@ -379,7 +379,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter19() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -387,7 +387,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct ste 2");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct ste 2", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 21, FilterType.STREET_ADDRESS));
@@ -398,7 +398,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter20() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -406,7 +406,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apartment 222");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apartment 222", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 29, FilterType.STREET_ADDRESS));
@@ -417,7 +417,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter21() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -425,7 +425,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apt 222");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apt 222", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 23, FilterType.STREET_ADDRESS));
@@ -436,7 +436,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter22() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -444,7 +444,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apt 222 anywhere");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "4 Devonshire Ct apt 222 anywhere", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 23, FilterType.STREET_ADDRESS));
@@ -455,7 +455,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter23() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -463,7 +463,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "address is 9444 Heritage St. over there");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "address is 9444 Heritage St. over there", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 28, FilterType.STREET_ADDRESS));
@@ -474,7 +474,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
     public void filter24() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new StreetAddressFilterStrategy()))
+                .withStrategies(List.of(new StreetAddressFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new StreetAddressAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -482,7 +482,7 @@ public class StreetAddressFilterTest extends AbstractFilterTest {
 
         final StreetAddressFilter filter = new StreetAddressFilter(filterConfiguration);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "address is 9444 Heritage St. apt 2 over there");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "address is 9444 Heritage St. apt 2 over there", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 34, FilterType.STREET_ADDRESS));
