@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -27,7 +27,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class UrlFilterTest extends AbstractFilterTest {
 
@@ -37,7 +37,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -45,7 +45,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE,"the page is http://page.com.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE,"the page is http://page.com.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 27, FilterType.URL));
@@ -57,7 +57,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -65,7 +65,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is myhomepage.com.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is myhomepage.com.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
@@ -75,7 +75,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -83,7 +83,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://myhomepage.com/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://myhomepage.com/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 51, FilterType.URL));
@@ -94,7 +94,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -102,7 +102,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://www.myhomepage.com/folder/page.html");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://www.myhomepage.com/folder/page.html", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 54, FilterType.URL));
@@ -113,7 +113,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -121,7 +121,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is www.myhomepage.com/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is www.myhomepage.com/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 48, FilterType.URL));
@@ -132,7 +132,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -140,7 +140,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is myhomepage.com.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is myhomepage.com.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 26, FilterType.URL));
@@ -151,7 +151,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl7() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -159,7 +159,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is www.myhomepage.com:80/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is www.myhomepage.com:80/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 51, FilterType.URL));
@@ -170,7 +170,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl8() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -178,7 +178,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://192.168.1.1:80/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://192.168.1.1:80/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 51, FilterType.URL));
@@ -189,7 +189,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl9() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -197,7 +197,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is 192.168.1.1:80/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is 192.168.1.1:80/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 34, 43, FilterType.URL));
@@ -209,7 +209,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl10() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -217,7 +217,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://192.168.1.1:80/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://192.168.1.1:80/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 41, 50, FilterType.URL));
@@ -229,7 +229,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl11() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -237,7 +237,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is https://192.168.1.1:80/folder/page.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is https://192.168.1.1:80/folder/page.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 42, 51, FilterType.URL));
@@ -249,7 +249,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl12() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -257,7 +257,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is test.ok new sentence");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is test.ok new sentence", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
@@ -267,7 +267,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl13() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -275,7 +275,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://2001:0db8:85a3:0000:0000:8a2e:0370:7334/test.html.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://2001:0db8:85a3:0000:0000:8a2e:0370:7334/test.html.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 59, 68, FilterType.URL));
@@ -287,7 +287,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl14() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -295,7 +295,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://2001:0db8:85a3:0000:0000:8a2e:0370:7334/test/.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is http://2001:0db8:85a3:0000:0000:8a2e:0370:7334/test/.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 12, 65, FilterType.URL));
@@ -306,7 +306,7 @@ public class UrlFilterTest extends AbstractFilterTest {
     public void filterUrl15() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new UrlFilterStrategy()))
+                .withStrategies(List.of(new UrlFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -314,7 +314,7 @@ public class UrlFilterTest extends AbstractFilterTest {
 
         final UrlFilter filter = new UrlFilter(filterConfiguration, false);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is https://192.168.1.1:80/folder/page.html. this is a new sentence.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the page is https://192.168.1.1:80/folder/page.html. this is a new sentence.", attributes);
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 42, 51, FilterType.URL));
